Another fix for overflowing commit details

--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,7 @@
     padding-top: 10px;
     padding-right: 60px;
     display: grid;
-    grid-template-columns: 1fr 4fr;
+    grid-template-columns: 20% 80%;
 
     /* Contains photo & software portfolio */
     /* grid-template-rows: 1fr 1fr; */
